Added redis-py for RedisJSON

--- a/docs/howtos/redisbloom/index-redisbloom.mdx
+++ b/docs/howtos/redisbloom/index-redisbloom.mdx
@@ -49,28 +49,13 @@ You will be provided with Public endpoint URL and "Redis Stack" as the type of d
 
 ![verify database](images/details_database.png)
 
-### Step 4. Install RedisInsight
+### Step 4. Using RedisInsight
 
 
 RedisInsight is a visual tool that lets you do both GUI- and CLI-based interactions with your Redis database, and so much more when developing your Redis based application. It is a fully-featured pure Desktop GUI client that provides capabilities to design, develop and optimize your Redis application. It works with any cloud provider as long as you run it on a host with network access to your cloud-based Redis server. It makes it easy to discover cloud databases and configure connection details with a single click. It allows you to automatically add Redis Enterprise Software and Redis Enterprise Cloud databases.
 
-You can install Redis Stack on your local system to get RedisInsight GUI tool up and running. Ensure that you have `brew` package installed in your Mac system.
-
-
- ```bash
-  brew tap redis-stack/redis-stack
-  brew install --cask redis-stack
- ```
-
-```
-  ==> Installing Cask redis-stack-redisinsight
-  ==> Moving App 'RedisInsight-preview.app' to '/Applications/RedisInsight-preview.app'
-  🍺  redis-stack-redisinsight was successfully installed!
-  ==> Installing Cask redis-stack
-  🍺  redis-stack was successfully installed!
- ```
-
-Go to Applications and click "RedisInsight Preview" to bring up the Redis Desktop GUI tool.
+[Follow this link](/explore/redisinsightv2/getting-started) to install RedisInsight v2 on your local system.
+Assuming that you already have RedisInsight v2 installed on your MacOS, you can browse through the Applications and click "RedisInsight-v2" to bring up the Redis Desktop GUI tool.
 
 ### Step 5. Add Redis database
 
