--- a/docs/howtos/redisjson/getting-started/index-gettingstarted.mdx
+++ b/docs/howtos/redisjson/getting-started/index-gettingstarted.mdx
@@ -40,29 +40,15 @@ You will be provided with Public endpoint URL and "Redis Stack" as the type of d
 
 ![verify database](details_database.png)
 
-### Step 4. Install RedisInsight
+### Step 4. Using RedisInsight
 
 RedisInsight is a visual tool that lets you do both GUI- and CLI-based interactions with your Redis database, and so much more when developing your Redis based application. It is a fully-featured pure Desktop GUI client that provides capabilities to design, develop and optimize your Redis application. It works with any cloud provider as long as you run it on a host with network access to your cloud-based Redis server. It makes it easy to discover cloud databases and configure connection details with a single click. It allows you to automatically add Redis Enterprise Software and Redis Enterprise Cloud databases.
 
-You can install Redis Stack on your local system to get RedisInsight GUI tool up and running. Ensure that you have `brew` package installed in your Mac system.
+[Follow this link](/explore/redisinsightv2/getting-started) to install RedisInsight v2 on your local system.
+Assuming that you already have RedisInsight v2 installed on your MacOS, you can browse through the Applications and click "RedisInsight-v2" to bring up the Redis Desktop GUI tool.
 
 
- ```bash
-  brew tap redis-stack/redis-stack
-  brew install --cask redis-stack
- ```
-
-```
-  ==> Installing Cask redis-stack-redisinsight
-  ==> Moving App 'RedisInsight-preview.app' to '/Applications/RedisInsight-preview.app'
-  🍺  redis-stack-redisinsight was successfully installed!
-  ==> Installing Cask redis-stack
-🍺  redis-stack was successfully installed!
- ```
-
-Go to Applications and click "RedisInsight-v2" to bring up the Redis Desktop GUI tool.
-
-### Step 6. Enter Redis Enterprise Cloud details
+### Step 5. Enter Redis Enterprise Cloud details
 
 Add the Redis Enterprise cloud database endpoint, port and password.
 
@@ -70,16 +56,14 @@ Add the Redis Enterprise cloud database endpoint, port and password.
 ![access redisinsight](database_creds.png)
 
 
-### Step 7. Verify the database under RedisInsight dashboard
+### Step 6. Verify the database under RedisInsight dashboard
 
 
 ![database details](database_details.png)
 
 
 
-
-
-### Step 6. Getting Started with RedisJSON
+### Step 7. Getting Started with RedisJSON
 
 
 The following steps use some basic RedisJSON commands. You can run them from the Redis command-line interface (redis-cli) or use the CLI available in RedisInsight. 
