Added screenshot for Heroku, Netlify and Vercel

--- a/docs/create/heroku/herokupython/index-herokupython.mdx
+++ b/docs/create/heroku/herokupython/index-herokupython.mdx
@@ -31,14 +31,7 @@ For a limited time, use **TIGER200** to get **$200** credits on Redis Enterprise
 
 ![recloud](try-free.png)
 
-[Follow this link to create a Redis Enterprise Cloud](/create/rediscloud) subscription and database as shown below:
-
-
-![heroku](launch_database.png)
-
-The database endpoint URL is unique for all and hence might be different in your case. Save it for future reference.
-
-
+[Follow this link to create a Redis Enterprise Cloud](/create/rediscloud) subscription and database. Once you create the database, you will get the database endpoint URL that is unique for all and hence might be different in your case. Save it for future reference.
 
 ### Step 2. Create a Heroku account
 
