--- a/docs/create/netlify/getting-started-with-netlify/index-getting-started-with-netlify.mdx
+++ b/docs/create/netlify/getting-started-with-netlify/index-getting-started-with-netlify.mdx
@@ -61,8 +61,7 @@ For a limited time, use **TIGER200** to get **$200** credits on Redis Enterprise
 :::
 
 
-![rediscloud](recloud_search.png)
-
+![rediscloud](details_database.png)
 
 ### Step 2. Install Netlify CLI
 
