--- a/docs/create/vercel/index-vercel.mdx
+++ b/docs/create/vercel/index-vercel.mdx
@@ -58,7 +58,7 @@ For a limited time, use **TIGER200** to get **$200** credits on Redis Enterprise
 
 
 
-![alt_text](images/rediscloud_endpoint.png "image_tooltip")
+![alt_text](images/details_database.png "image_tooltip")
 
 
 ### Step 2. Install Vercel CLI 
@@ -135,7 +135,7 @@ Let us first set up environment variables.
  vercel env add
 Vercel CLI 23.1.2
 ? What's the name of the variable? REDIS_ENDPOINT_URI
-? What's the value of REDIS_ENDPOINT_URI? redis-XXXX.c264.ap-south-1-1.ec2.cloud.redislabs.com:XXX
+? What's the value of REDIS_ENDPOINT_URI? redis-XXXX.c110-qa.us-east-1-1-1.ec2.qa-cloud.redislabs.com:XXX
 
 ```
 
