--- a/docs/create/heroku/herokuruby/index-herokuruby.mdx
+++ b/docs/create/heroku/herokuruby/index-herokuruby.mdx
@@ -26,20 +26,11 @@ For a limited time, use **TIGER200** to get **$200** credits on Redis Enterprise
 
 ![recloud](try-free.png)
 
-[Follow this link to create a Redis Enterprise Cloud](/create/rediscloud) subscription and database as shown below:
-
-
-![heroku](launch_database.png)
-
-The database endpoint URL is unique so will be different in your case. Save it for future reference.
-
-
+[Follow this link to create a Redis Enterprise Cloud](/create/rediscloud) subscription and database. Once you create the database, you will get the database endpoint URL that is unique for all and hence might be different in your case. Save it for future reference.
 
 ### Step 2. Create a Heroku account
 
 If you are using Heroku for the first time, create your new Heroku account [through this link](https://signup.heroku.com/login).
-
-![heroku](create_heroku.png)
 
 
 ### Step 3. Install the Heroku CLI on your system
