--- a/docs/create/heroku/ratelimiting-go/index-ratelimitinggo.mdx
+++ b/docs/create/heroku/ratelimiting-go/index-ratelimitinggo.mdx
@@ -24,7 +24,7 @@ For a limited time, use **TIGER200** to get **$200** credits on Redis Enterprise
 
 ![recloud](images/try-free.png)
 
-[Follow this link to create a Redis Enterprise Cloud](/create/rediscloud) subscription and database. Once you create the database, you will get the database endpoint URL that is unique for all and hence might be different in your case. Save it for future reference.
+[Follow this link to create a Redis Enterprise Cloud](/create/rediscloud) subscription and database. Once you create the database, you will be provisioned with a unique database endpoint URL, port and password. Save these for future reference.
 
 
 ### Step 2. Create a Heroku account
