Fixed CI/CD naming convention

--- a/docs/operate/index-operate.mdx
+++ b/docs/operate/index-operate.mdx
@@ -21,7 +21,7 @@ The following links demonstrate various ways to provision Redis and accelerate a
     <div class="col continuous">
         <RedisCard
             title="Continuous Integration and Deployment"
-            description="Embed Redis into your CI-CD Process"
+            description="Embed Redis into your CI/CD Process"
             preview="/img/logos/devops.png"
             page="/operate/continuous-integration-continuous-deployment"
             />
