--- a/docs/operate/continuous-integration-continuous-deployment/argocd/index-argocd.mdx
+++ b/docs/operate/continuous-integration-continuous-deployment/argocd/index-argocd.mdx
@@ -1,6 +1,6 @@
 ---
 id: index-argocd
-title: 'Argo CD: What It Is And Why It Should Be Part of Your Redis CI-CD Pipeline'
+title: 'Argo CD: What It Is And Why It Should Be Part of Your Redis CI/CD Pipeline'
 sidebar_label: Redis using Argo CD
 slug: /operate/continuous-integration-continuous-deployment/argocd
 authors: [ajeet,talon]
