--- a/docs/operate/continuous-integration-continuous-deployment/index-continuous-integration-continuous-deployment.mdx
+++ b/docs/operate/continuous-integration-continuous-deployment/index-continuous-integration-continuous-deployment.mdx
@@ -22,7 +22,7 @@ The following links show you the different ways to embed Redis into your continu
 
    <div class="col">
         <RedisCard
-            title="Argo CD - What It Is And Why It Should Be Part of Your Redis CI-CD Pipeline"
+            title="Argo CD - What It Is And Why It Should Be Part of Your Redis CI/CD Pipeline"
             description="Learn about Argo CD and implement voting app using Redis"
             page="/operate/continuous-integration-continuous-deployment/argocd"
             />
