--- a/docs/create/begin/index-begin.mdx
+++ b/docs/create/begin/index-begin.mdx
@@ -180,7 +180,7 @@ Vercel CLI 23.1.2
 
 By now, you will be able to login to Chat app and start chatting.
 
-![alt_text](images/vercel13.png "image_tooltip")
+![Using the chat app](images/vercel13.png "image_tooltip")
 
 The chat server works as a basic REST API which involves keeping the session and handling the user state in the chat rooms (besides the WebSocket/real-time part). When a WebSocket/real-time server is instantiated, which listens for the next events:
 
