--- a/docs/create/begin/index-begin.mdx
+++ b/docs/create/begin/index-begin.mdx
@@ -184,7 +184,7 @@ By now, you will be able to login to Chat app and start chatting.
 
 The chat server works as a basic REST API which involves keeping the session and handling the user state in the chat rooms (besides the WebSocket/real-time part). When a WebSocket/real-time server is instantiated, which listens for the next events:
 
-![alt_text](images/vercel3.png "image_tooltip")
+![Listening for events](images/vercel3.png "image_tooltip")
 
 If you want to know how the chat app works internally, [refer to this detailed blog tutorial](/howtos/chatapp#how-it-works)
 
