--- a/docs/develop/deno/index-deno.mdx
+++ b/docs/develop/deno/index-deno.mdx
@@ -53,7 +53,7 @@ For a limited time, use **TIGER200** to get **$200** credits on Redis Enterprise
 
 
 
-![Database details](details_database.png "image_tooltip")
+![Database details](details_database.png)
 
 
 ### Step 2. Get Deno 
