Fix typo on AWS page

--- a/docs/create/aws/index-aws.mdx
+++ b/docs/create/aws/index-aws.mdx
@@ -7,7 +7,7 @@ slug: /create/aws
 
 import RedisCard from '@site/src/theme/RedisCard';
 
-The following links provide you with the available options to run apps on Heroku using Redis:
+The following links provide you with the available options to run apps on AWS using Redis:
 
 <div class="row">
  <div class="col">
