--- a/docs/operate/continuous-integration-continuous-deployment/circleci/index-circleci.mdx
+++ b/docs/operate/continuous-integration-continuous-deployment/circleci/index-circleci.mdx
@@ -14,7 +14,7 @@ To deploy, CircleCI takes artifacts from your pipeline and sends them to whereve
 
 ## **How does CircleCI work?**
 
-![alt_text](images/circlecidiagram.png "image_tooltip")
+![CircleCI Overview](images/circlecidiagram.png "image_tooltip")
 
 
 After GitHub or Bitbucket are authorized and added as a project to cirlceci.com, every code change triggers CircleCI jobs. CircleCI sends an email notification of success or failure after the test completes. CircleCI finds and runs config.yml, tests the build, runs security scans, goes through approval steps, and then deploys.
