--- a/docs/operate/continuous-integration-continuous-deployment/circleci/index-circleci.mdx
+++ b/docs/operate/continuous-integration-continuous-deployment/circleci/index-circleci.mdx
@@ -38,7 +38,7 @@ As a DevOps engineer or developer, you can:
 * Get flaky test detection with test insights. 
 
 
-## **Deploy Redis Rate Limiting application on Heroku using CircleCI**
+## **Deploy a Redis Rate Limiting application on Heroku using CircleCI**
 
 
 ## **Prerequisites:**
