--- a/docs/operate/continuous-integration-continuous-deployment/circleci/index-circleci.mdx
+++ b/docs/operate/continuous-integration-continuous-deployment/circleci/index-circleci.mdx
@@ -60,7 +60,7 @@ Rate limiting is a mechanism that many developers may have to deal with at some 
 ## Step 1. Go to [https://circleci.com](https://circleci.com) and log in using your GitHub account
 
 
-![alt_text](images/circleci-login.png "image_tooltip")
+![CircleCI Login](images/circleci-login.png "image_tooltip")
 
 
 Choose your preferred login method. To make it easier, let us choose “GitHub” for this demonstration.
