--- a/docs/operate/continuous-integration-continuous-deployment/circleci/index-circleci.mdx
+++ b/docs/operate/continuous-integration-continuous-deployment/circleci/index-circleci.mdx
@@ -167,7 +167,7 @@ Once you make the new change, it will ask you to raise a new PR. Go ahead and me
 
 
 * `HEROKU_APP_NAME` is the name of your Heroku application (in this case, `simple-node-api-circleci`)
-* HEROKU_API_KEY is your Heroku account API key. This can be found under the Account tab of your Heroku account under Account Settings. Scroll to the API Key section and click **Reveal** to copy your API key.
+* `HEROKU_API_KEY` is your Heroku account API key. This can be found under the Account tab of your Heroku account under Account Settings. Scroll to the API Key section and click **Reveal** to copy your API key.
 
 
 ## Step 7. Set up the environment variables on CircleCI
