--- a/docs/operate/continuous-integration-continuous-deployment/circleci/index-circleci.mdx
+++ b/docs/operate/continuous-integration-continuous-deployment/circleci/index-circleci.mdx
@@ -179,7 +179,7 @@ With these in place, our CircleCI configuration will be able to make authenticat
 
 
 
-![alt_text](images/heroku-envir.png "image_tooltip")
+![Heroku Environment Variables](images/heroku-envir.png "image_tooltip")
 
 
 
