--- a/docs/operate/continuous-integration-continuous-deployment/circleci/index-circleci.mdx
+++ b/docs/operate/continuous-integration-continuous-deployment/circleci/index-circleci.mdx
@@ -190,7 +190,7 @@ As soon as you merge the pull request, the tool will trigger the build automatic
 
 
 
-![alt_text](images/heroku-trigger.png "image_tooltip")
+![Triggering the build](images/heroku-trigger.png "image_tooltip")
 
 
 By now, you should be able to access your application. 
