--- a/docs/operate/continuous-integration-continuous-deployment/circleci/index-circleci.mdx
+++ b/docs/operate/continuous-integration-continuous-deployment/circleci/index-circleci.mdx
@@ -223,7 +223,7 @@ remote:        https://*****************.herokuapp.com/ deployed to Heroku
 
 
 
-![alt_text](images/rate-limiting-example.png "image_tooltip")
+![Application running](images/rate-limiting-example.png "image_tooltip")
 
 
 
