Various text formatting fixes.

--- a/docs/operate/continuous-integration-continuous-deployment/circleci/index-circleci.mdx
+++ b/docs/operate/continuous-integration-continuous-deployment/circleci/index-circleci.mdx
@@ -49,11 +49,11 @@ As a DevOps engineer or developer, you can:
 
 In this demo, we will be using the Redis Rate Limiting app built using Python and Redis. 
 
-Rate limiting is a mechanism that many developers may have to deal with at some point in their life. It’s useful for a variety of purposes, such as sharing access to limited resources or limiting the number of requests made to an API endpoint and responding with a 429 status code. The complete source code of the project is [hosted over GitHub](https://github.com/redis-developer/basic-rate-limiting-demo-python). In this example, we will configure CircleCI to deploy the Rate Limiting app directly on the Heroku platform.
+Rate limiting is a mechanism that many developers may have to deal with at some point in their life. It’s useful for a variety of purposes, such as sharing access to limited resources or limiting the number of requests made to an API endpoint and responding with a 429 status code. The complete source code of the project is [hosted over at GitHub](https://github.com/redis-developer/basic-rate-limiting-demo-python). In this example, we will configure CircleCI to deploy the Rate Limiting app directly on the Heroku platform.
 
 ## Step 1. Log in to CircleCI
 
-Go to [https://circleci.com](https://circleci.com) and log in using your GitHub account
+Go to [https://circleci.com](https://circleci.com) and log in using your GitHub account:
 
 ![CircleCI Login](images/circleci-login.png)
 
@@ -71,23 +71,21 @@ We will be using the Redis rate-limiting project for this demonstration.
 
 ## Step 4. Create a new CircleCI configuration file
 
-CircleCI believes in _configuration as code_. As a result, the entire delivery process from build to deploy is orchestrated through a single file called config.yml. The config.yml file is located in a folder called .circleci at the top of your project. CircleCI uses the YAML syntax for config.
-
+CircleCI believes in _configuration as code_. As a result, the entire delivery process from build to deploy is orchestrated through a single file called `config.yml`. The `config.yml` file is located in a folder called `.circleci`` at the top of your project. CircleCI uses the YAML syntax for config.
 
 ![Selecting a config file](images/circleci-config.png)
 
-
-As we haven’t yet created a config.yml file, let’s choose the “Fast” option to create a new config.yml based on the available template that is editable.
+As we haven’t yet created a `config.yml` file, let’s choose the “Fast” option to create a new `config.yml` based on the available template that is editable.
 
 ![Selecting the fast option](images/circleci-config2.png)
 
-Once you click “Set Up project,” it will ask you to select sample configs as shown in the following screenshot:
+Once you click “Set Up project” it will ask you to select sample configs as shown in the following screenshot:
 
 ![Sample configs](images/circleci-demoapp.png)
 
-Add the following content under .circleci/config.yml and save the file:
+Add the following content under `.circleci/config.yml` and save the file:
 
-```
+```yaml
 version: 2.1
 orbs:
   heroku: circleci/heroku@1.2.6
@@ -97,9 +95,9 @@ workflows:
       - heroku/deploy-via-git
 ```
 
-In the configuration above, we pull in the Heroku orb circleci/heroku@1.2.6, which automatically gives us access to a powerful set of Heroku jobs and commands.
+In the configuration above, we pull in the Heroku orb `circleci/heroku@1.2.6`, which automatically gives us access to a powerful set of Heroku jobs and commands.
 
-One of those jobs is the heroku/deploy-via-git, which deploys your application straight from your GitHub repo to your Heroku account.
+One of those jobs is `heroku/deploy-via-git`, which deploys your application straight from your GitHub repo to your Heroku account.
 
 ## Step 5. Merge the pull request
 
@@ -134,7 +132,7 @@ As soon as you merge the pull request, the tool will trigger the build automatic
 
 ![Triggering the build](images/heroku-trigger.png)
 
-By now, you should be able to access your application. 
+You should now be able to access your application. 
 
 ```
 remote:        Collecting attrs>=19.2.0        
