--- a/docs/operate/continuous-integration-continuous-deployment/index-continuous-integration-continuous-deployment.mdx
+++ b/docs/operate/continuous-integration-continuous-deployment/index-continuous-integration-continuous-deployment.mdx
@@ -19,7 +19,15 @@ The following links show you the different ways to embed Redis into your continu
             page="/operate/continuous-integration-continuous-deployment/jenkins"
             />
     </div>
-
+    <div class="col">
+        <RedisCard
+            title="CircleCI: What It Is and Why It Should Be Part of Your Redis CI/CD"
+            description="Learn how use CircleCI to deploy a Redis application"
+            page="/operate/continuous-integration-continuous-deployment/circleci"
+            />
+    </div>
+</div>
+<div class="row">
    <div class="col">
         <RedisCard
             title="Argo CD - What It Is And Why It Should Be Part of Your Redis CI/CD Pipeline"
@@ -27,7 +35,6 @@ The following links show you the different ways to embed Redis into your continu
             page="/operate/continuous-integration-continuous-deployment/argocd"
             />
      </div>
-
   </div>
 
 
